samples/_failures_safe/1761400231_fa831d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31917f24.c: In function ‘main’:
./samples/SAFE/__tmp_31917f24.c:158:12: error: missing terminating " character
  158 |     printf("Checks
      |            ^~~~~~~
./samples/SAFE/__tmp_31917f24.c:158:5: error: expected expression at end of input
  158 |     printf("Checks
      |     ^~~~~~
./samples/SAFE/__tmp_31917f24.c:158:5: error: expected declaration or statement at end of input
